--- a/cv/css/resume_style.css
+++ b/cv/css/resume_style.css
@@ -3,8 +3,8 @@ body{
 }
 
 #main {
-	margin-top: 30px;
-	padding-top: 0px;
+	margin-top: 60px;
+	padding-top: 5px;
 	width: 1000px;
 	margin-left: auto ;
   	margin-right: auto ;
@@ -12,3 +12,18 @@ body{
   	color: 	#0000EE;
   }
 
+#header_section{
+	line-height: 4pt;
+}
+
+#header_name{
+	font-weight: bold;
+}
+
+.section_title{
+	font-weight: bold;
+}
+
+#body{
+	font-weight: normal;
+}
