--- a/cv/css/resume_style.css
+++ b/cv/css/resume_style.css
@@ -3,27 +3,90 @@ body{
 }
 
 #main {
-	margin-top: 60px;
+	margin-top: 30px;
 	padding-top: 5px;
 	width: 1000px;
-	margin-left: auto ;
+	margin-left: 30% ;
   	margin-right: auto ;
   	font-family: 'Quattrocento', serif;
   	color: 	#0000EE;
   }
 
 #header_section{
-	line-height: 4pt;
+	/*line-height: 4pt;*/
+	font-size: 10px;
+	margin-bottom: 40px;
+	margin-top: 10px;
 }
 
 #header_name{
 	font-weight: bold;
+	font-size: 20px;
+	margin-bottom: 5px;
+}
+
+#header_info{
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 .section_title{
 	font-weight: bold;
 }
 
-#body{
+h1 {
 	font-weight: normal;
+	font-size: 20px;
+	margin-bottom: 0px;
+}
+
+#section{
+	margin-bottom: 50px;
+
+}
+
+#sub_section{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-size: 14px;
+}
+
+#dates {
+	float: left;
+	width: 75px;	
+	margin-top:5px;
+	margin-bottom: 0px;
+	font-size: 12px;
+
+	/*line-height: 100%;*/
+}
+
+#shortinfo {
+	float:left;
+	padding-left:5px;
+	width: 850px;
+	margin-top: 5px;
+	margin-bottom: 2px;
+}
+
+
+a:link {
+    text-decoration: underline;
+    color: #0000EE;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #0000EE;
+}
+
+a:hover {
+   text-decoration: none;
+   background-color: #0000EE;
+   color: white;
+}
+
+a:active {
+    text-decoration: none;
+    color: #0000EE;
 }
